Removing property stub and fixing vertical alignment issue

--- a/src/styles/components/altRoomDisplays.less
+++ b/src/styles/components/altRoomDisplays.less
@@ -88,6 +88,12 @@
           display:block;
           background:transparent;
           line-height:28px;
+          strong {
+            display:inline;
+          }
+        }
+        h5 {
+          margin-bottom:20px !important;
         }
         pricing-info {
           button-submit {
